--- a/Assignment-2-Yokogawa/Assignment-2-Yokogawa.vcxproj.filters
+++ b/Assignment-2-Yokogawa/Assignment-2-Yokogawa.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Assignment-2-Yokogawa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Logger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Logger.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
